src/test/ui/regions/regions-lifetime-bounds-on-fns.stderr
error[E0308]: mismatched types
  --> $DIR/regions-lifetime-bounds-on-fns.rs:20:43
   |
LL |     let _: fn(&mut &isize, &mut &isize) = a;
   |                                           ^ one type is more general than the other
   |
   = note: expected fn pointer `for<'r, 's, 't0, 't1> fn(&'r mut &'s isize, &'t0 mut &'t1 isize)`
                 found fn item `[fn item {a::<'_, '_>}: for<'r, 's> fn(&'r mut &isize, &'s mut &isize)]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
